chili file roughed in. Will finish at a later date, adding in styles and functioniality of pages

--- a/recipes/chrisChili.html
+++ b/recipes/chrisChili.html
@@ -8,9 +8,38 @@
   <body>
     <a href="../index.html">Home</a>
     <h1>Chris's Chili Recipe</h1>
+    <p>This Coca-Cola chili is my recipe, and it has won over 12 chili cook-offs, so I figured I'd share. It is a medium steak and bean chili similar to Steak N' Shake's chili — but better. It is somewhat involved, but trust me, it is worth every minute. Try it; you will not be disappointed.
+</p>
     <img
       src="../pictures/chilirecipechris.webp"
       alt="Picture of a bowl of finished chili with cheese, green onions, and sour cream"
     />
+
+      <h2>Ingredients</h2>
+      <ul>
+        <li>¼ cup bacon grease (see notes)</li>
+        <li>1 ½ pounds boneless beef round steak, cut into 1/3-inch cubes</li>
+        <li>1 ½ pounds beef sirloin steak, cut into 1/3-inch cubes</li>
+        <li>1 ½ cups onion soup, prepared from a packet of dry onion soup mix</li>
+        <li>3 (15 ounce) cans kidney beans, undrained</li>
+        <li>1 (8 ounce) can tomato sauce</li>
+        <li>1 (6 ounce) can tomato paste</li>
+        <li>1 tablespoon chili powder</li>
+        <li>2 teaspoons ground cumin</li>
+        <li>1 teaspoon salt</li>
+        <li>½ teaspoon ground black pepper</li>
+        <li>1 cup cola soft drink (such as Coke®)</li>
+        <li>1 tablespoon yellow sport pepper sauce (such as Texas Petes's®)</li>
+        <li>2 teaspoons unsweetened cocoa powder</li>
+      </ul>
+      <section aria-label="steps-heading">
+         <h2 id="steps-heading">Directions<h2>
+          <ol>
+            <li>Place bacon grease into a large stainless steel soup pot over medium-high heat. Cook and stir cubed round and sirloin steak meat in hot bacon grease until well browned, about 10 minutes. Pour in onion soup and bring to a boil. Reduce to a simmer and cook for 7 minutes, stirring to dissolve any browned flavor bits from the bottom of the pot.</li>
+            <li>Stir in kidney beans, tomato sauce, tomato paste, chili powder, cumin, salt, and pepper. Bring to a boil, stirring frequently to avoid burning the bottom. Cover, reduce heat to low, and simmer for 1 hour, stirring occasionally.</li>
+            <li>Stir in cola, pepper sauce, and cocoa. Simmer until flavors blend, about 20 more minutes. Serve hot.</li>
+          </ol>
+
+      </section>
   </body>
 </html>
